2013-02-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Version 0.6.3

2013-02-06  Hannes Mühleisen  <hannes@cwi.nl>

	* R/hmac.R: Fixed hmac for sha512 hashes
	* tests/hmacTest.R: Added test cases for hmac with sha512
	* tests/hmacTest.Rout.save: Updated accordingly

2013-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Version 0.6.2

	* man/AES.Rd: Switch from paste0() to paste() to permit use on
	R-oldrelease as per email by Uwe Ligges

	* tests/AESTest.R: Idem
	* tests/AESTest.Rout.save: Updated accordingly

2013-01-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Version 0.6.1

	* inst/GPL-2: Added as a fixed reference input for regression tests
	via the scripts in tests/ as the versions installed by R differ
	across OS and installations

	* tests/digestTest.R: No longer rely on file.path(R.home(),"COPYING")
	but rather use our own copy of GPL-2; ensure final test does not print
	* tests/digestTest.Rout.save: Updated accordingly

2013-01-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors): Added Duncan Murdoch

2013-01-19  Duncan Murdoch <murdoch.duncan@gmail.com>

	* src/aes.c: Devine's AES implementation added
	* src/aes.h: header for AES implementation
	* src/raes.c: interface to it
	* R/AES.R: Add AES object to do AES encryption
	* tests/AESTest.R: tests from the standards documents
	* man/AES.Rd: document AES object
	* NAMESPACE: export AES constructor and print method

2012-11-25  Dirk Eddelbuettel  <edd@debian.org>

	* Release 0.6.0

	* src/sha2.h: In order to build on Windows:
	  - Include the newer header file stdint.h
	  - Enforce standard integer types by defining SHA2_USE_INTTYPES_H
	  - Define BYTE_ORDER and default to LITTLE_ENDIAN

	* src/digest.c: Use uint8_t from stdint.h for sha256

2012-11-24  Dirk Eddelbuettel  <edd@debian.org>

	* src/digest.c: Allow for extra null character in output[] vector

	* tests/digestTest.Rout.save: Update/Revert a change by Hannes;